[FIX]修复版本比较取最大错误问题